# gemstone-prediction

./: .gitignore  Dockerfile  README.md  lambda_function.py  notebook.ipynb  pyproject.toml  test.py  train.ipynb
dataset/: .gitignore
