[project]
name = "capstone1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "keras-image-helper>=0.0.2",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]
